add put operation
